--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Cache and logs (Symfony2)
+.idea
 /app/cache/*
+/app/config/google-api-client
+/logs/*
+/app/.env
 /app/logs/*
 !app/cache/.gitkeep
 !app/logs/.gitkeep
